<resources>
    <string name="app_name">Simulador 2.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--Botones de opciones de input-->

    <string name="btn_casing">Casing</string>
    <string name="btn_tubing">Tubing</string>
    <string name="btn_packer">Packer</string>
    <string name="btn_ff_up">Ff Up</string>
    <string name="btn_ff_down">Ff Down</string>
    <string name="btn_ff_rotation">Ff Rotation</string>
    <string name="btn_fluid">Fluid</string>
    <string name="btn_temperature">Temperature</string>
    <string name="btn_pressure">Pressure</string>
    <string name="btn_internal_friction">Internal Friction</string>
    <string name="btn_load">Load</string>
    <string name="text_mensaje">Simulador</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Menu de navegacion Drawer-->
    <string name="nav_proyecto">Proyecto</string>
    <string name="nav_inputs">Inputs</string>
    <string name="nav_outputs">Outputs</string>

    <!--Menu de navegacion Drawer-->
    <string name="titulo_inicial">SIMULADOR</string>
    <string name="titulo_inputs">Inputs</string>
    <string name="titulo_outputs">Outputs</string>

    <string name="valor_minimo">Mínimo</string>
    <string name="valor_maximo">Máximo</string>

    <string name="action_agregar_fragment">Agregar en fragmento</string>
    <string name="action_borrar_todos_fragment">Borrar en fragmento</string>



    <!--Cadenas de texto para hint para los formularios fragmentos de entrada-->
    <string name="hint_rango_minimo">Añada el rango minimo</string>
    <string name="hint_rango_maximo">Añada el rango máximo</string>
    <string name="hint_id">Añada el ID</string>
    <string name="hint_od">Añada el OD</string>
    <string name="hint_unit_weight">Añada el Unit Weight</string>
    <string name="hint_drift">Añada el Drift</string>
    <string name="hint_tension">Añada la tension</string>
    <string name="hint_compression">Añada la Compression</string>
    <string name="hint_burst">Añada el Burst</string>
    <string name="hint_collapse">Añada el Collapse</string>
    <string name="hint_torque_limit">Añada el Torque Limit</string>
    <string name="hint_thermal_exp">Añada el Thermal Exp</string>

</resources>
