<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_proyecto"
            android:title="@string/nav_proyecto" />
            <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_inputs"
            android:title="@string/nav_inputs" />
            <!--android:icon="@drawable/ic_menu_gallery"-->
        <item
            android:id="@+id/nav_outputs"
            android:title="@string/nav_outputs" />
            <!--android:icon="@drawable/ic_menu_slideshow"-->
<!--        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>
</menu>