<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bennu.administrador.simulador20.vista.AddTubingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rango_minimo"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_rango_minimo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="29dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rango_maximo"
                android:layout_below="@id/txt_input_lay1"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_rango_maximo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id"
                android:layout_below="@id/txt_input_lay2"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_od"
                android:layout_below="@id/txt_input_lay3"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_od"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_unit_weight"
                android:layout_below="@id/txt_input_lay4"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_unit_weight"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_drift"
                android:layout_below="@id/txt_input_lay5"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_drift"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tension"
                android:layout_below="@id/txt_input_lay6"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_tension"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_compression"
                android:layout_below="@id/txt_input_lay7"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_compression"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_burst"
                android:layout_below="@id/txt_input_lay8"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_bust"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_collapse"
                android:layout_below="@id/txt_input_lay9"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_collapse"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_torque_limit"
                android:layout_below="@id/txt_input_lay10"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_torque_limit"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_thermal_exp"
                android:layout_below="@id/txt_input_lay11"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_thermal_exp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>