<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bennu.administrador.simulador20.vista.AddCasingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rango_minimo"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_rango_minimo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="29dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rango_maximo"
                android:layout_below="@id/txt_input_lay1"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_rango_maximo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id"
                android:layout_below="@id/txt_input_lay2"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_od"
                android:layout_below="@id/txt_input_lay3"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_od"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_drift"
                android:layout_below="@id/txt_input_lay4"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_drift"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_lay6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_burst"
                android:layout_below="@id/txt_input_lay5"
                android:animateLayoutChanges="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txt_bust"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="27dp" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

